src/objects/tractReconciliationSetting__mdt.object
<CustomObject>
    <description>Settings for use in Tract Reconciliation process including totBuilder, totViewer, tractReconciliation</description>
    <fields>
        <fullName>baseURL__c</fullName>
        <label>baseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>torRecordTypeId__c</fullName>
        <label>torRecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totRecordTypeId__c</fullName>
        <label>totRecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>tractReconciliationSetting</label>
    <pluralLabel>tractReconciliationSettings</pluralLabel>
</CustomObject>